Changelog

0.9.6 - 1st April 2020
======================

Fix

* correction to $list_influenza and $list_zostavax tag display logic (erroneously showed 'removed from reminder list')

0.9.5 - 30th March 2020
=======================

New

* add intID/intID_Date options to $list_zostavax, $list_influenza, $list_measlesVax, $list_vax

Change

* change from $asplenia_list to $asplenic_list
* adjustable $change_subscription (add adjust_days)

0.9.4 - 15th March 2020
=======================

New

* add $db$vaccines $db$vaccine_disease $db$vaxdiseases (none of them used, yet)

Changes

* change from MariaDB to Airtabler
* filter some 'dummy' entries from $list_appointments, such as 'DO NOT BOOK'
* $read_configuration_db throws warning and stops if $config_db is not a valid,
   even after an attempted opening (by $read_configuration_db)
* remove LicenseCheckDate from user configuration

Fix

* $server.update invalid Name logic fixed
* $userconfig.update and $userconfig.delete checks for $Fullname inclusion in description

0.9.3 - 7th March 2020
======================

Improvements

* faster $list_appointments : doesn't retrieve entire patients table!
* reduce calls to $db$practice in $UserFullConfig
*  strip whitespace from Fullname in $UserFullConfig
* $Driver definition in config database Server description (default is "SQL Server")

Fixes

* remove InternalID '0' patients from $appointments_filtered
  - these are 'dummy' appointments
* deal with NA in ProviderNo
* add SENTTOWORKCOVER to $db$invoices
   SENTTOWORKCOVER is not a useful field, but for some reason
   some versions of MSSQL odbc client/server configurations require
   the extra field (not all fields work) to maintain non-zero status
   for UserID/InternalID after a select!
* removal of LicenseCheckData from user configuration

Changes

* subscription change : identifiers are changed to upper case

0.9.2 - 20th February 2020
==========================

Fixes

* self$UserFullConfig fix if self$db$users empty
